public interface HurtingObject extends TouchableObject{
    public int getDangerlevel();
    public int getPainmeter();
    public Trauma getTrauma();
}
