package environment;
import java.util.List;
public interface Landscape {
    List <Landscape> checkAvailablePath();

}
