package environment.objects;

public interface TemperatureObject extends TouchableObject {
    int getTemperaturechange();
}
