package human;

public class Trauma {
    private final String description;
    public Trauma(String description){
        this.description = description;
    }
    public String getDescription(){
        return description;
    }
}
