package storyline;

public interface Narrator {
    public void SayText();
}
