package storyline;

public class NarratorHuman implements Narrator{
    public void SayText() {

    }
}
